// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<UncontrolledDropdown>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    color="secondary"
    data-toggle="dropdown"
  >
    Add Module
  </DropdownToggle>
  <DropdownMenu
    tag="div"
  />
</UncontrolledDropdown>
`;

exports[`renders correctly 2`] = `
<UncontrolledDropdown>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    color="secondary"
    data-toggle="dropdown"
  >
    Add Module
  </DropdownToggle>
  <DropdownMenu
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
       
      Wrangle
       
    </DropdownItem>
    <DropdownItem
      className="ml-2"
      data-id={9}
      onClick={[Function]}
      tag="button"
      toggle={true}
    >
       
      Cast
       
    </DropdownItem>
    <DropdownItem
      divider={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
       
      Visualize
       
    </DropdownItem>
    <DropdownItem
      className="ml-2"
      data-id={6}
      onClick={[Function]}
      tag="button"
      toggle={true}
    >
       
      Chart
       
    </DropdownItem>
    <DropdownItem
      divider={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
       
      Analyze
       
    </DropdownItem>
    <DropdownItem
      className="ml-2"
      data-id={1}
      onClick={[Function]}
      tag="button"
      toggle={true}
    >
       
      Formula
       
    </DropdownItem>
    <DropdownItem
      divider={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
       
      Sources
       
    </DropdownItem>
    <DropdownItem
      className="ml-2"
      data-id={2}
      onClick={[Function]}
      tag="button"
      toggle={true}
    >
       
      Load From URL
       
    </DropdownItem>
    <DropdownItem
      divider={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
       
      Wrangle
       
    </DropdownItem>
    <DropdownItem
      className="ml-2"
      data-id={10}
      onClick={[Function]}
      tag="button"
      toggle={true}
    >
       
      Melt
       
    </DropdownItem>
  </DropdownMenu>
</UncontrolledDropdown>
`;
